--- a/platypus/firmware/config.cfg
+++ b/platypus/firmware/config.cfg
@@ -1,6 +1,7 @@
 # platypus config
 
 # MPU 9DOF IMU settings: 
+i2c_bus:1
 # 0x68: 104
 # 0x69: 105
 mpu_address:104
@@ -10,7 +11,7 @@ dsp_hands:2
 
 # devices
 start_imu:true
-start_ldc:true
+start_ldc:false
 start_env:true
 start_dsp:true
 start_mcu:false
