--- a/platypus/firmware/platypus.conf
+++ b/platypus/firmware/platypus.conf
@@ -1,12 +1,15 @@
 # platypus config
 
-# MPU 9DOF IMU settings: 
+# device i2c
 i2c_bus:1
+
+# MPU 9DOF IMU settings: 
 # 0x68: 104
 # 0x69: 105
 mpu_address:104
 
 # Display settings:
+dsp_resolution:128
 dsp_hands:2
 
 # devices
