changed i2cbus + dspres

--- a/platypus/firmware/platypus.conf
+++ b/platypus/firmware/platypus.conf
@@ -1,7 +1,7 @@
 # platypus config
 
 # device i2c
-i2c_bus:6
+i2c_bus:1
 
 # MPU 9DOF IMU settings:
 # 0x68: 104
@@ -9,7 +9,11 @@ i2c_bus:6
 mpu_address:104
 
 # Display settings:
-dsp_resolution:128
+# old: 96px
+# new: 128px
+dsp_resolution:96
+
+# clock hands
 dsp_hands:2
 
 # devices
