--- a/platypus/firmware/platypus.conf
+++ b/platypus/firmware/platypus.conf
@@ -23,14 +23,11 @@ start_imu:true
 start_ldc:true
 start_env:true
 start_dsp:true
-start_mcu:true
 start_bat:true
-
-# mcu sampling rate [Hz]
-sample_rate:25
 
 # other
 log_level:1
 alert_threshold:4
-sleep_enabled:true
+colors:true
+idonly:false
 
